tarmac/new_pattern24/kubernetes/applications/runner_controller/overlays/environments/sharedservices/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
spec:
  template:
    spec:
      containers:
        - name: manager
          args:
          - --metrics-addr=127.0.0.1:8080
          - --enable-leader-election
          - --sync-period=10m
          - --docker-image=docker:dind
          - --runner-image=summerwind/actions-runner:latest
